2.log
arch/x86/kernel/cpu/microcode/intel_early.c: In function ‘get_matching_model_microcode.isra.3.constprop.9’:
arch/x86/kernel/cpu/microcode/intel_early.c:349:1: warning: the frame size of 1064 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/iio/magnetometer/ak8975.c: In function ‘ak8975_probe’:
drivers/iio/magnetometer/ak8975.c:788:14: warning: ‘chipset’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  data->def = &ak_def_array[chipset];
              ^
drivers/isdn/hardware/eicon/diddfunc.c: In function ‘connect_didd’:
drivers/isdn/hardware/eicon/diddfunc.c:77:1: warning: the frame size of 1136 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/isdn/hardware/eicon/divasfunc.c: In function ‘connect_didd’:
drivers/isdn/hardware/eicon/divasfunc.c:192:1: warning: the frame size of 1136 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/isdn/hardware/eicon/mntfunc.c: In function ‘connect_didd’:
drivers/isdn/hardware/eicon/mntfunc.c:112:1: warning: the frame size of 1136 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/isdn/hardware/eicon/idifunc.c: In function ‘connect_didd’:
drivers/isdn/hardware/eicon/idifunc.c:223:1: warning: the frame size of 1136 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/isdn/hardware/eicon/capifunc.c: In function ‘divacapi_connect_didd’:
drivers/isdn/hardware/eicon/capifunc.c:1094:1: warning: the frame size of 1136 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/isdn/hardware/eicon/message.c: In function ‘sig_ind’:
drivers/isdn/hardware/eicon/message.c:6115:1: warning: the frame size of 1188 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/gpu/drm/nouveau/nvkm/engine/gr/ctxgm204.c: In function ‘gm204_grctx_generate_405b60’:
drivers/gpu/drm/nouveau/nvkm/engine/gr/ctxgm204.c:975:1: warning: the frame size of 1184 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
In file included from drivers/net/ethernet/cadence/macb.c:12:0:
drivers/net/ethernet/cadence/macb.c: In function ‘macb_probe’:
include/linux/clk.h:471:15: warning: ‘tx_clk’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  clk_unprepare(clk);
               ^
drivers/net/ethernet/cadence/macb.c:2737:28: note: ‘tx_clk’ was declared here
  struct clk *pclk, *hclk, *tx_clk;
                            ^
In file included from drivers/net/ethernet/cadence/macb.c:12:0:
include/linux/clk.h:471:15: warning: ‘hclk’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  clk_unprepare(clk);
               ^
drivers/net/ethernet/cadence/macb.c:2737:21: note: ‘hclk’ was declared here
  struct clk *pclk, *hclk, *tx_clk;
                     ^
drivers/net/fddi/defxx.c: In function ‘dfx_pci_register’:
drivers/net/fddi/defxx.c:586:10: warning: ‘bar_len’ may be used uninitialized in this function [-Wmaybe-uninitialized]
   region = request_region(bar_start[0], bar_len[0], print_name);
          ^
drivers/net/fddi/defxx.c:537:18: note: ‘bar_len’ was declared here
  resource_size_t bar_len[3];  /* resource length */
                  ^
drivers/net/fddi/defxx.c:586:10: warning: ‘bar_start’ may be used uninitialized in this function [-Wmaybe-uninitialized]
   region = request_region(bar_start[0], bar_len[0], print_name);
          ^
drivers/net/fddi/defxx.c:536:18: note: ‘bar_start’ was declared here
  resource_size_t bar_start[3];  /* pointers to ports */
                  ^
drivers/net/fddi/defxx.c: In function ‘dfx_pci_unregister’:
drivers/net/fddi/defxx.c:3720:5: warning: ‘*((void *)&bar_start+16)’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  if (bar_start[2] != 0)
     ^
drivers/net/fddi/defxx.c:3700:18: note: ‘*((void *)&bar_start+16)’ was declared here
  resource_size_t bar_start[3];  /* pointers to ports */
                  ^
In file included from include/linux/device.h:16:0,
                 from include/linux/dma-mapping.h:5,
                 from drivers/net/fddi/defxx.c:206:
include/linux/ioport.h:198:49: warning: ‘*((void *)&bar_len+16)’ may be used uninitialized in this function [-Wmaybe-uninitialized]
 #define release_region(start,n) __release_region(&ioport_resource, (start), (n))
                                                 ^
drivers/net/fddi/defxx.c:3701:18: note: ‘*((void *)&bar_len+16)’ was declared here
  resource_size_t bar_len[3];  /* resource lengths */
                  ^
In file included from include/linux/device.h:16:0,
                 from include/linux/dma-mapping.h:5,
                 from drivers/net/fddi/defxx.c:206:
include/linux/ioport.h:198:49: warning: ‘bar_start’ may be used uninitialized in this function [-Wmaybe-uninitialized]
 #define release_region(start,n) __release_region(&ioport_resource, (start), (n))
                                                 ^
drivers/net/fddi/defxx.c:3700:18: note: ‘bar_start’ was declared here
  resource_size_t bar_start[3];  /* pointers to ports */
                  ^
In file included from include/linux/device.h:16:0,
                 from include/linux/dma-mapping.h:5,
                 from drivers/net/fddi/defxx.c:206:
include/linux/ioport.h:198:49: warning: ‘bar_len’ may be used uninitialized in this function [-Wmaybe-uninitialized]
 #define release_region(start,n) __release_region(&ioport_resource, (start), (n))
                                                 ^
drivers/net/fddi/defxx.c:3701:18: note: ‘bar_len’ was declared here
  resource_size_t bar_len[3];  /* resource lengths */
                  ^
drivers/scsi/aic94xx/aic94xx_sds.c: In function ‘asd_process_ctrl_a_user’:
drivers/scsi/aic94xx/aic94xx_sds.c:597:21: warning: ‘offs’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  asd_read_reg_string(asd_ha, buffer, asd_ha->hw_prof.flash.bar+offs,
                     ^
drivers/scsi/aic94xx/aic94xx_sds.c:985:6: note: ‘offs’ was declared here
  u32 offs, size;
      ^
drivers/staging/rtl8192u/ieee80211/ieee80211_rx.c: In function ‘RxReorderIndicatePacket’:
drivers/staging/rtl8192u/ieee80211/ieee80211_rx.c:765:1: warning: the frame size of 1064 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/staging/rtl8192u/ieee80211/rtl819x_TSProc.c: In function ‘RxPktPendingTimeout’:
drivers/staging/rtl8192u/ieee80211/rtl819x_TSProc.c:94:1: warning: the frame size of 1048 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
In file included from drivers/net/wireless/ath/ath9k/beacon.c:18:0:
drivers/net/wireless/ath/ath9k/ath9k.h:206:8: error: redeclaration of enumerator ‘WLAN_RC_PHY_OFDM’
        WLAN_RC_PHY_OFDM,
        ^
In file included from drivers/net/wireless/ath/ath9k/debug.h:21:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:29,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/rc.h:68:2: note: previous definition of ‘WLAN_RC_PHY_OFDM’ was here
  WLAN_RC_PHY_OFDM,
  ^
In file included from drivers/net/wireless/ath/ath9k/beacon.c:18:0:
drivers/net/wireless/ath/ath9k/ath9k.h:207:8: error: redeclaration of enumerator ‘WLAN_RC_PHY_CCK’
        WLAN_RC_PHY_CCK,
        ^
In file included from drivers/net/wireless/ath/ath9k/debug.h:21:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:29,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/rc.h:69:2: note: previous definition of ‘WLAN_RC_PHY_CCK’ was here
  WLAN_RC_PHY_CCK,
  ^
make[5]: *** [drivers/net/wireless/ath/ath9k/beacon.o] Error 1
make[4]: *** [drivers/net/wireless/ath/ath9k] Error 2
make[4]: *** Waiting for unfinished jobs....
make[3]: *** [drivers/net/wireless/ath] Error 2
make[3]: *** Waiting for unfinished jobs....
drivers/net/ethernet/neterion/vxge/vxge-main.c: In function ‘VXGE_COMPLETE_VPATH_TX.isra.35’:
drivers/net/ethernet/neterion/vxge/vxge-main.c:119:1: warning: the frame size of 1040 bytes is larger than 1024 bytes [-Wframe-larger-than=]
 }
 ^
drivers/scsi/advansys.c:71:2: warning: #warning this driver is still not properly converted to the DMA API [-Wcpp]
 #warning this driver is still not properly converted to the DMA API
  ^
make[2]: *** [drivers/net/wireless] Error 2
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [drivers/net] Error 2
make: *** [drivers] Error 2
